k8s/ingress-dubbo-greeter.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    managed-by: higress-deploy
  name: dubbo-ingress
  namespace: higress-system
  annotations:
    # 保持原有的 Dubbo/gRPC 配置
    higress.io/backend-protocol: grpc
    # 这里的 destination 必须精确匹配 Nacos 中的服务全名
    higress.io/destination: providers:com.pocrd.dubbo_demo.api.GreeterServiceHttpExport:1.0.0:public.PUBLIC-GROUP.public.nacos
    higress.io/auth-tls-secret: https-server-secret-cacert
    higress.io/auth-tls-verify-depth: "3"
    higress.io/keepalive-timeout: "120s"
    higress.io/keepalive-requests: "1000"
spec:
  ingressClassName: higress
  tls:
  - hosts:
    - api.caringfamily.cn
    secretName: https-server-secret
  rules:
  - host: api.caringfamily.cn
    http:
      paths:
      - path: /dapi
        pathType: Prefix
        backend:
          resource:
            apiGroup: networking.higress.io
            kind: McpBridge
            name: default
