k8s/ingress-dubbo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    managed-by: higress-deploy
  name: dubbo-ingress
  namespace: higress-system
  annotations:
    higress.io/backend-protocol: grpc
    higress.io/destination: providers:com.pocrd.service_demo.api.GreeterServiceHttpExport:1.0.0:public.PUBLIC-GROUP.public.nacos
    higress.io/auth-tls-secret: https-server-secret-cacert
    higress.io/auth-tls-verify-depth: "3"
spec:
  ingressClassName: higress
  tls:
  - hosts:
    - api.caringfamily.cn
    secretName: https-server-secret
  rules:
  - host: api.caringfamily.cn
    http:
      paths:
      - path: /dapi
        pathType: Prefix
        backend:
          resource:
            apiGroup: networking.higress.io
            kind: McpBridge
            name: default
