k8s/ingress-xz-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xiaozhi-web-ingress
  namespace: higress-system
  annotations:
    higress.io/backend-protocol: HTTP
spec:
  ingressClassName: higress
  tls:
  - hosts: ["xz.caringfamily.cn"]
    secretName: https-server-secret
  rules:
  - host: xz.caringfamily.cn
    http:
      paths:
      - path: /xz
        pathType: Prefix
        backend:
          service:
            name: xiaozhi-web-static
            port:
              number: 8084
