k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: greeter-ingress
  namespace: higress-system
  annotations:
    higress.io/backend-protocol: grpc
    higress.io/destination: providers:com.pocrd.service_demo.api.GreeterServiceHttpExport:1.0.0:public.PUBLIC-GROUP.public.nacos
    higress.io/auth-tls-secret: https-server-secret-cacert
    higress.io/auth-tls-verify-client: "optional"
    higress.io/auth-tls-verify-depth: "3"
spec:
  ingressClassName: higress
  tls:
  - hosts:
    - www.caringfamily.cn
    secretName: https-server-secret
  rules:
  - host: www.caringfamily.cn
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          resource:
            apiGroup: networking.higress.io
            kind: McpBridge
            name: default
